--- a/package.json
+++ b/package.json
@@ -21,8 +21,6 @@
     "bcrypt": "^5.0.1",
     "express": "^4.18.1",
     "joi": "^17.6.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.7.0",
-    "mongoose": "^6.3.6"
+    "jsonwebtoken": "^8.5.1"
   }
 }
