--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.16.1",
     "http-errors": "^2.0.0",
     "joi": "^17.6.0",
+    "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.6.0",
     "morgan": "~1.9.1",
